 ^ Updated robots.txt to the current directory structure.
 ^ Replaced com_languages with its refactored version.
 ! Thanks to Christophe Demko for helping refactor the com_languages component.
 ^ Replaced com_messages with its refactored version.
 ! Thanks to Joe LeBlanc for helping refactor the com_messages component.
 - Removed DEFAULT values of TEXT types in installation SQL.

05-Aug-2009 Ercan Ozkaya
 # [#17479] Com_menus and com_modules issue fix (Thanks Johnathan Cheung)

04-Aug-2009 Sam Moffatt
 + Added file installer thanks to work by Ajay Lulia

02-Aug-2009 Sam Moffatt
 + Added default to JApplication::getCfg
 + [#16939] Add Cookie Domain and Path setting to global config

01-Aug-2009 Hannes Papenberg
 # Fixed com_templates and template parameterset-to-menu item assignment

30-Jul-2009 Gergo Erdosi
 ^ Updated SimplePie to version 1.2.

30-Jul-2009 Ercan Ozkaya
 + Added method registry for JHtml

29-Jul-2009 Gergo Erdosi
 + [#17091] Enabling installing front-end languages for plugins

21-Jul-2009 Sam Moffatt
 ^ Changed default behaviour of JStream::open to not autodetect processing method

10-Jul-2009 Gergo Erdosi
 + Added Geshi plugin back to content plugins.
 ^ Updated Geshi library to version 1.0.8.4.
 - Removed language/pdf_fonts directory.
 - Removed Khepri template.
 - Removed unnecessary Food icons.
 - Removed images/smilies and images/stories directories.
 ^ Renamed images/M_images to images/joomla.
 ^ Renamed references of M_images to joomla.
 + Added copyright information to administrator module layout files.

08-Jul-2009 Gergo Erdosi
 # Fixed bug in JForm::loadFileType() path building.
 ^ Changed header icons in com_users.

07-Jul-2009 Gergo Erdosi
 + Added MySQL version check to installation.
 # [#17119] [patch] Add keyboard access to admin com_admin
 # [#17131] [patch] Add keyboard access to admin mod_login

07-Jul-2009 Andrew Eddie
 # Fixed modal article selector.

06-Jul-2009 Andrew Eddie